<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsAbout"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_Layout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Tentang Vviped"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/logo_full" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/settings_about_vviped1"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="12dp"
                    android:text="Untuk Penjual"
                    android:textColor="@color/colorAccent2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/settings_about_vviped2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_vviped2_1"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/field_settings_about"
                    />
                <TextView
                    android:id="@+id/settings_about_vviped2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_vviped2_2"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/field_settings_about"
                    />

                <TextView
                    android:id="@+id/settings_about_vviped2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_vviped2_3"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/field_settings_about"
                    />

                <TextView
                    android:id="@+id/settings_about_vviped2_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_vviped2_4"
                    android:textSize="15sp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:layout_marginVertical="5dp"
                    android:padding="10dp"
                    android:background="@drawable/field_settings_about"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginBottom="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Untuk Pembeli"
                    android:layout_marginTop="30dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="12dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent2"
                    android:fontFamily="@font/cabin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/settings_about_vviped3_1"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:padding="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/field_settings_about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:textSize="15sp"
                    android:text="@string/settings_about_vviped3_2"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/cabin"
                    android:padding="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/field_settings_about" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>