<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_campaign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_campaign">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_Layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/backspace"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_keyboard_backspace"
                app:tint="@color/colorTextPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Buat Campaign"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_shadow_end_color"
                    android:orientation="vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:layout_marginTop="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="14sp"
                        android:text="@string/create_campaign_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingLeft="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kategori"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/campaign_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:padding="10dp"
                            android:background="@drawable/btn_corner"
                            android:textSize="15sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ex: Kegiatan Sosial"
                            android:textSize="12dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorTextSecondary"

                            />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingLeft="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Judul"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/campaign_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:background="@drawable/btn_corner"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:textSize="15sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ex: Berbagi Makanan untuk Pedagang Jalanan"
                            android:textSize="12dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorTextSecondary"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingLeft="7dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Deskripsi"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/campaign_deskripsi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/btn_corner"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_campaign_deskripsi"
                            android:textSize="12dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorTextSecondary"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingLeft="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Penerima donasi"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/campaign_penerima"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:background="@drawable/btn_corner"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:textSize="15sp"
                           />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_campaign_penerimadonasi"
                            android:textSize="12dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorTextSecondary"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingLeft="7dp"
                        >

                        <TextView
                            android:id="@+id/campaign_rincian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Usage details if the donation are collected"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/usage_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/btn_corner"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_campaign_detail_penggunaan"
                            android:textSize="12dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorTextSecondary"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:paddingRight="30dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingLeft="10dp"
                                android:text="Upload Foto Campaign"
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="20dp"
                                android:layout_gravity="center"
                                android:text="Format picture: PNG/JPG/JPEG"
                                android:textSize="12dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/image_campaign"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_margin="20dp"
                                android:padding="20dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_upload_img" />
                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nomor Telepon"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/campaign_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:padding="10dp"
                            android:background="@drawable/btn_corner"
                            android:textSize="15sp"
                            android:hint="ex: 081222334455"/>
                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"

                    tools:ignore="MissingConstraints">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent2"
                        android:text="@string/create_campaign_2"/>


                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:max="100"
                        tools:progress="40"
                        />

                    <Button
                        android:id="@+id/button_upload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:background="@drawable/btn_radiusbg"
                        android:text="Upload"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent" />


                </LinearLayout>
            </LinearLayout>




        </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>